Add G28 at line 38, before BED_MESH_CALIBRATE

--- a/mainsail.cfg
+++ b/mainsail.cfg
@@ -35,7 +35,8 @@ gcode:
     M109 S{EXTRUDER_TEMP - 10} T0       ; Set temporary nozzle temp of to prevent oozing during homing and auto bed leveling
     G4 S10                              ; Allow partial nozzle warmup
     G90                                 ; Use absolute coordinates
-    BED_MESH_CALIBRATE       ; Load the approapriate Bed Mesh Profile instead of Marlin G29 (default = Name of mesh profile)
+    G28                                 ; Home all axes
+    BED_MESH_CALIBRATE                  ; Load the approapriate Bed Mesh Profile instead of Marlin G29 (default = Name of mesh profile)
     G28                                 ; Home all axes
 #Preheat Extruder
     G92 E0                              ; Reset Extruder
